--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="username">Username</string>
     <string name="points">Points:</string>
     <string name="movie">Movie:</string>
+    <string name="end_game">End Game</string>
 </resources>
